--- a/style.css
+++ b/style.css
@@ -101,8 +101,20 @@ section{
     margin-left: 5%;
     margin-right: 10%;
     border-radius: 10px;
-    
+}
+footer{
+    color: white;
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+    background-color: black;
+    padding: 20px 20px;
+}
+footer span{
+    color: orange
+}
+footer p{
+    font-size: 10px;
+}
     
     
 
-}
